# regie

./: .dockerignore  .gitignore  docker-compose.yml  package-lock.json  package.json
structured_outputs/: .dockerignore  Dockerfile  audit.md  degree_audit_class_list_builder.py  degree_audit_extractor.py  get_recommended_courses.py  main.py  pyproject.toml  schedule_builder.py  util.py
structured_outputs/class_lists/: class_list.json
structured_outputs/parse_audit/: audit_to_markdown.py  parse_degree_audit.py
